@@ -1,10 +1,14 @@
 package configurations
 
+import common.Os
+import common.applyPerformanceTestSettings
+import common.buildToolGradleParameters
+import common.checkCleanM2
+import common.distributedPerformanceTestParameters
+import common.gradleWrapper
+import common.performanceTestCommandLine
 import jetbrains.buildServer.configs.kotlin.v2018_2.AbsoluteId
-import jetbrains.buildServer.configs.kotlin.v2018_2.BuildStep
-import jetbrains.buildServer.configs.kotlin.v2018_2.buildSteps.script
 import model.CIBuildModel
-import model.OS
 import model.PerformanceTestType
 import model.Stage
 
@@ -13,11 +17,7 @@ class PerformanceTest(model: CIBuildModel, type: PerformanceTestType, stage: Sta
     id = AbsoluteId(uuid)
     name = "Performance ${type.name.capitalize()} Coordinator - Linux"
 
-    applyDefaultSettings(this, timeout = type.timeout)
-    artifactRules = """
-        build/report-*-performance-tests.zip => .
-    """.trimIndent()
-    detectHangingBuilds = false
+    applyPerformanceTestSettings(timeout = type.timeout)
 
     if (type == PerformanceTestType.test) {
         features {
@@ -27,12 +27,6 @@ class PerformanceTest(model: CIBuildModel, type: PerformanceTestType, stage: Sta
 
     params {
         param("performance.baselines", type.defaultBaselines)
-        param("env.GRADLE_OPTS", "-Xmx1536m -XX:MaxPermSize=384m")
-        param("env.JAVA_HOME", buildJavaHome)
-        param("env.BUILD_BRANCH", "%teamcity.build.branch%")
-        param("performance.db.url", "jdbc:h2:ssl://dev61.gradle.org:9092")
-        param("performance.db.username", "tcagent")
-        param("TC_USERNAME", "TeamcityRestBot")
     }
 
     steps {
@@ -40,25 +34,15 @@ class PerformanceTest(model: CIBuildModel, type: PerformanceTestType, stage: Sta
             name = "GRADLE_RUNNER"
             tasks = ""
             gradleParams = (
-                    gradleParameters()
-                    + listOf("clean distributed${type.taskId}s -x prepareSamples --baselines %performance.baselines% ${type.extraParameters} -PtimestampedVersion -Porg.gradle.performance.branchName=%teamcity.build.branch% -Porg.gradle.performance.db.url=%performance.db.url% -Porg.gradle.performance.db.username=%performance.db.username% -PteamCityUsername=%TC_USERNAME% -PteamCityPassword=%teamcity.password.restbot% -Porg.gradle.performance.buildTypeId=${IndividualPerformanceScenarioWorkers(model).id} -Porg.gradle.performance.workerTestTaskName=fullPerformanceTest -Porg.gradle.performance.coordinatorBuildId=%teamcity.build.id% -Porg.gradle.performance.db.password=%performance.db.password.tcagent%",
-                            buildScanTag("PerformanceTest"), "-PtestJavaHome=${coordinatorPerformanceTestJavaHome}")
-                            + model.parentBuildCache.gradleParameters(OS.linux)
+                    buildToolGradleParameters(isContinue = false)
+                        + performanceTestCommandLine(task = "distributed${type.taskId}s", baselines = "%performance.baselines%", extraParameters = type.extraParameters)
+                        + distributedPerformanceTestParameters(IndividualPerformanceScenarioWorkers(model).id.toString())
+                        + listOf(buildScanTag("PerformanceTest"))
+                        + model.parentBuildCache.gradleParameters(Os.linux)
                     ).joinToString(separator = " ")
         }
-        script {
-            name = "CHECK_CLEAN_M2"
-            executionMode = BuildStep.ExecutionMode.ALWAYS
-            scriptContent = m2CleanScriptUnixLike
-        }
-        if (model.tagBuilds) {
-            gradleWrapper {
-                name = "TAG_BUILD"
-                executionMode = BuildStep.ExecutionMode.ALWAYS
-                tasks = "tagBuild"
-                gradleParams = "-PteamCityUsername=%teamcity.username.restbot% -PteamCityPassword=%teamcity.password.restbot% -PteamCityBuildId=%teamcity.build.id% -PgithubToken=%github.ci.oauth.token%"
-            }
-        }
+        checkCleanM2()
+        tagBuild(model, true)
     }
 
     applyDefaultDependencies(model, this, true)
